--- a/notebooks/model.ipynb
+++ b/notebooks/model.ipynb
@@ -603,9 +603,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tf_gpu",
+   "display_name": "Python 3.6.10 64-bit ('tf_gpu': conda)",
    "language": "python",
-   "name": "tf_gpu"
+   "name": "python_defaultSpec_1601886161534"
   },
   "language_info": {
    "codemirror_mode": {
@@ -617,7 +617,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.10-final"
   }
  },
  "nbformat": 4,
